--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -4,6 +4,7 @@ $body-light: #eceff4;
 $body-dark: #2e3440;
 
 $section-color-dark: #4c566a;
+$section-color-light: #d8dee9;
 
 @font-face {
   font-family: Rubik;
@@ -20,6 +21,7 @@ body {
 
 body.body--dark {
   background-color: $body-dark;
+  color: $body-light;
 
   .q-header {
     background-color: $body-dark;
@@ -32,8 +34,13 @@ body.body--dark {
 
 body.body--light {
   background-color: $body-light;
+  color: $body-dark;
 
   .q-header {
     background-color: $body-light;
+  }
+
+  .content-section {
+    background-color: $section-color-light;
   }
 }
