fixed color of toggle switch

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -16,7 +16,8 @@ $primary: #5e81ac;
 $secondary: #26a69a;
 $accent: #bf616a;
 
-$dark: #1d1d1d;
+$dark: #2e3440;
+$light: #eceff4;
 
 $positive: #21ba45;
 $negative: #c10015;
