fixed color of header title on light mode

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -43,4 +43,8 @@ body.body--light {
   .content-section {
     background-color: $section-color-light;
   }
+
+  .title-header {
+    color: $body-dark;
+  }
 }
