--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -75,6 +75,11 @@ body.body--dark {
   .layer {
     background-image: url("/layers/layer-dark.svg");
   }
+
+  .blobs {
+    width: 100%;
+    background: url("/blobs/blobs-dark.svg") no-repeat bottom / cover;
+  }
 }
 
 body.body--light {
@@ -104,6 +109,11 @@ body.body--light {
 
   .layer {
     background-image: url("/layers/layer-light.svg");
+  }
+
+  .blobs {
+    width: 100%;
+    background: url("/blobs/blobs-light.svg") no-repeat bottom / cover;
   }
 }
 
