buttons now rounded

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -42,6 +42,10 @@ html {
   color: #e5e9f0;
 }
 
+.q-btn {
+  border-radius: 16px;
+}
+
 .title-header {
   color: $body-light;
   text-decoration: none;
