--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -58,6 +58,10 @@ a:hover {
   }
 }
 
+.nav-item {
+  text-decoration: none;
+}
+
 body.body--dark {
   background-color: $body-dark;
   color: $body-light;
@@ -90,6 +94,10 @@ body.body--dark {
   .blobs {
     width: 100%;
     background: url("/blobs/blobs-dark.svg") no-repeat bottom / cover;
+  }
+
+  .nav-item {
+    color: $body-light;
   }
 
   footer {
@@ -133,6 +141,14 @@ body.body--light {
   .blobs {
     width: 100%;
     background: url("/blobs/blobs-light.svg") no-repeat bottom / cover;
+  }
+
+  .q-drawer {
+    background-color: $section-color-light;
+  }
+
+  .nav-item {
+    color: $body-dark;
   }
 
   a {
